Impove image loading time on gallery, fix bug with category text wrap

--- a/src/srv/charlotte-website/web/themes/custom-theme/assets/src/scss/components/home.scss
+++ b/src/srv/charlotte-website/web/themes/custom-theme/assets/src/scss/components/home.scss
@@ -33,6 +33,7 @@
           transition: all ease-in-out 0.1s;
           transition-property: background-color, color, border;
           font-size: 0.9rem;
+          white-space: nowrap;
           cursor: pointer;
   
           &[active] {
